tests/samples/negative/generics/public_generic_inferred_return.ax
module public_generic_inferred_return;

pub fn id[T](value: T) {
    return value;
}
